<resources>
    <string name="app_name">EffectiveMobileTestTask</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_category">Select Category</string>
    <string name="view_all">view all</string>
    <string name="hot_sales">Hot Sales</string>
    <string name="see_more">see more</string>
    <string name="buy_now">Buy now!</string>
    <string name="filter_options">Filter options</string>
    <string name="done">Done</string>
    <string name="search">search</string>
    <string name="dollar">$</string>
    <string name="size">Size</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="product_details">Product Details</string>
    <string name="shop">Shop</string>
    <string name="details">Details</string>
    <string name="features">Features</string>
    <string name="add_address">Add address</string>
    <string name="my_cart">My Cart</string>
    <string name="checkout">Checkout</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery</string>
    <string name="select_color_and_capacity">Select color and capacity</string>

    <string-array name="brands_array">
        <item>Samsung</item>
        <item>Iphone</item>
        <item>Xiaomi</item>
    </string-array>

    <string-array name="prices_array">
        <item>$100-$200</item>
        <item>$200-$300</item>
        <item>$300-$500</item>
    </string-array>

    <string-array name="sizes_array">
        <item>$4.5 to 5.5 inches</item>
        <item>$5.5 to 6.5 inches</item>
        <item>$6.5 to 7.5 inches</item>
    </string-array>

</resources>