<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mycart.MyCartFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/frame_margin"
        app:backgroundTint="@color/dark_blue_brand"
        app:fabCustomSize="37dp"
        app:layout_constraintBottom_toBottomOf="@id/add_address_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/add_address_label"
        app:shapeAppearance="@style/RectangularRoundedFloatingActionButton"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/add_address_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/frame_margin"
        android:text="@string/add_address"
        android:textAppearance="@style/TopTextTextAppearance"
        app:layout_constraintBottom_toBottomOf="@id/location_button"
        app:layout_constraintEnd_toStartOf="@id/location_button"
        app:layout_constraintTop_toTopOf="@id/location_button" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/frame_margin"
        android:layout_marginEnd="@dimen/frame_margin"
        app:backgroundTint="@color/orange_brand"
        app:fabCustomSize="37dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/RectangularRoundedFloatingActionButton"
        app:srcCompat="@drawable/ic_outline_location_on_24"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/my_cart_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/frame_margin"
        android:layout_marginTop="40dp"
        android:text="@string/my_cart"
        android:textAppearance="@style/TextAppearance.EffectiveMobileTestTask.Headline1"
        android:textSize="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_address_label" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:cardBackgroundColor="@color/dark_blue_brand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearance="@style/MyCartCardShapeAppearance">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_cart_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/top_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/frame_margin"
                app:dividerColor="@color/white"
                app:layout_constraintBottom_toTopOf="@id/checkout_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/total_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/frame_margin"
                android:layout_marginBottom="@dimen/frame_margin"
                android:text="@string/total"
                android:textAppearance="@style/MyCartTextAppearance"
                app:layout_constraintBottom_toTopOf="@id/delivery_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/delivery_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/frame_margin"
                android:text="@string/delivery"
                android:textAppearance="@style/MyCartTextAppearance"
                app:layout_constraintBottom_toTopOf="@id/bottom_divider"
                app:layout_constraintStart_toStartOf="@id/total_label" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/bottom_divider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/checkout_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/checkout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/frame_margin"
                android:layout_marginBottom="@dimen/frame_margin"
                android:paddingVertical="10dp"
                android:text="@string/checkout"
                android:textAppearance="@style/ButtonTextAppearance"
                app:backgroundTint="@color/orange_brand"
                app:cornerRadius="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>